# aries-fire-detection-demo

./: .gitignore  README.md  aries-demo.vcxproj  aries-demo.vcxproj.filters  fire-detection-demo.desktop  run.sh  update.sh
mxq/: yolo11s-fire-final.mxq
package/: README.md  package.sh
rc/: FeederSetting.yaml  FeederSetting_MLA100.yaml  FeederSetting_MLA400.yaml  LayoutSetting.yaml  LayoutSetting_MLA100.yaml  LayoutSetting_MLA400.yaml  ModelSetting.yaml  ModelSetting_MLA100.yaml  ModelSetting_MLA400.yaml
src/demo/: CMakeLists.txt  define.h  demo.cc  demo.h  feeder.cc  feeder.h  model.cc  model.h  model_inference.cc  post_yolo_anchorless.cc  post_yolo_anchorless.h  post_yolo_anchorless_fire_detection.cc  post_yolo_anchorless_fire_detection.h  yaml_util.cc
